# mg_1c

./: .gitignore  AddInNative.vcproj  AddInNative.vcxproj  AddInNative.vcxproj.filters  Addin1C_Email.vcxproj  BaseNativeAPI.h  CMakeLists.txt  Component.def  ComponentManager.cpp  ComponentManager.h  ComponentObject.h  Export.cpp  GetMessage.txt  Makefile  MessageGetter.cpp  MessageGetter.h  MessageGetter.sln  Metadata.h  README  SmartComponentBase.cpp  SmartComponentBase.h  SmartVariant.cpp  SmartVariant.h  UpgradeLog.XML  Variant.cpp  Variant.h  stdafx.h
bind/: MessageGetter.exp  MessageGetter.ilk  MessageGetter.lib
cmake/: FindPoco.cmake
x64/Release/: CL.read.1.tlog  CL.write.1.tlog  MessageGetter.exp  MessageGetter.lastbuildstate  MessageGetter.lib  MessageGetter.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
